--- a/vnext-bot-app-db.csproj
+++ b/vnext-bot-app-db.csproj
@@ -237,8 +237,8 @@
     <Content Include="Assets\Wide310x150Logo.scale-200.png" />
     <Content Include="Assets\Wide310x150Logo.scale-400.png" />
     <Content Include="available-updates.png" />
+    <Content Include="logo.png" />
     <Content Include="Properties\Default.rd.xml" />
-    <Content Include="secure-logo.png" />
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
